--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,5 +40,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8000"
+  "proxy": "http://localhost:8000",
+  "devDependencies": {
+    "@babel/preset-env": "^7.28.3"
+  }
 }
