--- a/tekton/triggers-rbac.yaml
+++ b/tekton/triggers-rbac.yaml
@@ -1,17 +1,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
-  name: tekton-triggers-role
+  name: tekton-triggers-eventlistener-clusterrole
 rules:
-  # EventListener needs to be able to read its configuration
   - apiGroups: ["triggers.tekton.dev"]
-    resources: ["eventlisteners", "triggerbindings", "triggertemplates"]
+    resources: ["clustertriggerbindings", "clusterinterceptors", "eventlisteners", "triggerbindings", "triggertemplates", "triggers"]
     verbs: ["get", "list", "watch"]
-  # EventListener needs to create PipelineRuns
   - apiGroups: ["tekton.dev"]
     resources: ["pipelineruns"]
     verbs: ["create"]
-  # EventListener needs to read secrets and configmaps
   - apiGroups: [""]
     resources: ["configmaps", "secrets"]
     verbs: ["get", "list", "watch"]
@@ -19,13 +16,14 @@ rules:
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
-  name: tekton-triggers-rolebinding
+  name: tekton-triggers-eventlistener-clusterbinding
 subjects:
   - kind: ServiceAccount
     name: tekton-pipeline-sa
+    namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: tekton-triggers-role
+  kind: ClusterRole
+  name: tekton-triggers-eventlistener-clusterrole
