--- a/tekton/pipeline-template.yaml
+++ b/tekton/pipeline-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerTemplate
 metadata:
-  name: web-app-pipeline-template
+  name: pdf-editor-ci-pprun
 spec:
   params:
     - name: git-repo-url
