--- a/tekton/pipeline-template.yaml
+++ b/tekton/pipeline-template.yaml
@@ -10,6 +10,7 @@ spec:
       kind: PipelineRun
       metadata:
         generateName: web-app-ci-run-
+        namespace: default
       spec:
         pipelineRef:
           name: pdf-editor-ci-pp
